# tech_assesment_pytest_001

./: .envrc  .gitignore  .pre-commit-config.yaml  GEMINI.md  README.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yml
docs/: CHECKLIST.md
src/tech_assesment_001/test/: conftest.py  test_assets.py  test_auth.py  test_findings.py  test_health.py  test_reports.py  test_scans.py
src/tech_assesment_001/utils/: auth.py  credentials.py  data.py  logger.py
